[gd_scene load_steps=33 format=3 uid="uid://bdtpfxxgt61wi"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ygxe0"]
[ext_resource type="PackedScene" uid="uid://s8k74qfuj5v5" path="res://scenes/Player.tscn" id="2_1p5uc"]
[ext_resource type="PackedScene" uid="uid://cb1fw2tjn5m8i" path="res://scenes/ResourceNode_Tree.tscn" id="3_gr60o"]
[ext_resource type="PackedScene" uid="uid://dxwfmdstadut6" path="res://scenes/ResourceNode_Rock.tscn" id="4_0a0g4"]
[ext_resource type="Resource" uid="uid://dqd1oalaq4y18" path="res://objects_items/Resources/ResourceType/minable.tres" id="5_uxcp2"]
[ext_resource type="PackedScene" uid="uid://b4uaoyqxem1w6" path="res://scenes/grid_helper.tscn" id="6_70sbn"]
[ext_resource type="Script" path="res://scripts/CanvasLayer.gd" id="7_j0wvi"]
[ext_resource type="PackedScene" uid="uid://coe2tgc7sfe3x" path="res://UI/inventory_gui.tscn" id="7_ssoyc"]
[ext_resource type="PackedScene" uid="uid://cblb868wmi7u5" path="res://UI/coins.tscn" id="8_a6e6y"]
[ext_resource type="PackedScene" uid="uid://c4o4m0scee8bn" path="res://scenes/door.tscn" id="8_c5fwa"]
[ext_resource type="Script" path="res://UI/coins.gd" id="9_bdnvc"]
[ext_resource type="PackedScene" uid="uid://br50uegnqyt2m" path="res://interaction/shopTool.tscn" id="11_nkisx"]
[ext_resource type="PackedScene" uid="uid://pa7g1th4x476" path="res://UI/shop_gui/shop_gui.tscn" id="11_xlxi7"]
[ext_resource type="PackedScene" uid="uid://ckrte5bskt18r" path="res://UI/Hotbar.tscn" id="12_vmnwl"]
[ext_resource type="PackedScene" uid="uid://cwcx8pg876ddh" path="res://Plant/hotbar_seed.tscn" id="13_7hbhp"]
[ext_resource type="PackedScene" uid="uid://bkj8u037f5l43" path="res://UI/shop_gui/sell_zone_gui.tscn" id="14_y2ptk"]
[ext_resource type="Script" path="res://scripts/HealthBar.gd" id="15_26ss6"]
[ext_resource type="Texture2D" uid="uid://bcjpth6njqind" path="res://UI/Cutted/images/bars_17.png" id="16_chkju"]
[ext_resource type="PackedScene" uid="uid://dhykcev6fajsd" path="res://interaction/Sell_Zone.tscn" id="16_ef3f0"]
[ext_resource type="Texture2D" uid="uid://djrxhc36clipn" path="res://UI/Cutted/images/bars_02.png" id="16_kyxdx"]
[ext_resource type="Script" path="res://scripts/DayNightCycle.gd" id="18_8wxja"]
[ext_resource type="FontFile" uid="uid://b25gpkw4brhr5" path="res://Fonts/ThaleahFat.ttf" id="18_p04c0"]
[ext_resource type="PackedScene" uid="uid://bq5jpa8ih6qf2" path="res://UI/day_night_cycle_ui.tscn" id="19_uamut"]
[ext_resource type="Texture2D" uid="uid://bnx5uoxq4mgvy" path="res://Colors/daynightcycle-gradient-texture.tres" id="21_gk5qr"]
[ext_resource type="PackedScene" uid="uid://dydmag1n6ramg" path="res://scenes/tile_map.tscn" id="22_fhokq"]
[ext_resource type="PackedScene" uid="uid://bos36urvquqkq" path="res://UI/shop_gui/seed_shop/seed_shop_gui.tscn" id="22_g7jk7"]
[ext_resource type="PackedScene" uid="uid://1hdis8mylhni" path="res://Monster/Scenes/enemy.tscn" id="27_f8u45"]
[ext_resource type="PackedScene" uid="uid://6trs67ycdg64" path="res://scenes/height_adjuster_component.tscn" id="28_dahbj"]
[ext_resource type="Script" path="res://scripts/dynamic_camera.gd" id="28_e2mcc"]
[ext_resource type="PackedScene" uid="uid://dl8lnin5t4r0h" path="res://scenes/scene_trigger.tscn" id="30_n2tld"]

[sub_resource type="LabelSettings" id="LabelSettings_t0jvi"]
font = ExtResource("18_p04c0")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_306s6"]
size = Vector2(18, 9)

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ygxe0")

[node name="Player" parent="." instance=ExtResource("2_1p5uc")]
position = Vector2(560, 208)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(560, 208)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("28_e2mcc")

[node name="TileMap" parent="." instance=ExtResource("22_fhokq")]
layer_5/tile_data = PackedInt32Array(917553, 196612, 0, 983085, 589828, 3)
layer_7/name = "Walkpath"
layer_7/tile_data = PackedInt32Array(786473, 655364, 8, 852009, 589828, 8, 852008, 589828, 10)

[node name="Plant" type="Node2D" parent="TileMap"]
y_sort_enabled = true
position = Vector2(-480, -512)

[node name="GridHelper" parent="TileMap" instance=ExtResource("6_70sbn")]
position = Vector2(96, -144)

[node name="WorldObjects" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(-463, -547)

[node name="ResourceNode_Tree" parent="WorldObjects" instance=ExtResource("3_gr60o")]
position = Vector2(1149, 608)

[node name="ResourceNode_Rock" parent="WorldObjects" instance=ExtResource("4_0a0g4")]
position = Vector2(1088, 611)
node_types = Array[Resource("res://objects_items/Resources/ResourceType/resource_node_type.gd")]([ExtResource("5_uxcp2")])

[node name="Door" parent="WorldObjects" instance=ExtResource("8_c5fwa")]
position = Vector2(1127, 740)

[node name="GUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7_j0wvi")

[node name="Coins" parent="GUI" instance=ExtResource("8_a6e6y")]
offset_left = 24.0
offset_top = 584.0
offset_right = -1004.0
offset_bottom = -19.0
script = ExtResource("9_bdnvc")

[node name="InventoryGUI" parent="GUI" instance=ExtResource("7_ssoyc")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -78.0
offset_right = 122.5
offset_bottom = 78.0

[node name="ShopGUI" parent="GUI" instance=ExtResource("11_xlxi7")]
visible = false

[node name="Hotbar" parent="GUI" instance=ExtResource("12_vmnwl")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -38.0
offset_right = 79.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0

[node name="HotbarSeed" parent="GUI" instance=ExtResource("13_7hbhp")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -78.0
offset_right = 14.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="SellZoneGUI" parent="GUI" instance=ExtResource("14_y2ptk")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -78.0
offset_right = 122.5
offset_bottom = 78.0

[node name="HealthBar" type="TextureProgressBar" parent="GUI" node_paths=PackedStringArray("player")]
custom_minimum_size = Vector2(48, 7)
offset_left = 16.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 23.0
texture_under = ExtResource("16_kyxdx")
texture_progress = ExtResource("16_chkju")
script = ExtResource("15_26ss6")
player = NodePath("../../Player")

[node name="Label" type="Label" parent="GUI/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -2.1
offset_right = 40.0
offset_bottom = 12.9
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
label_settings = SubResource("LabelSettings_t0jvi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DayNightCycleUI" parent="GUI" instance=ExtResource("19_uamut")]
offset_left = 24.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 112.0

[node name="SeedShopGUI" parent="GUI" instance=ExtResource("22_g7jk7")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -78.0
offset_right = 122.5
offset_bottom = 78.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
script = ExtResource("18_8wxja")
gradient_texture = ExtResource("21_gk5qr")
INGAME_SPEED = 10.0

[node name="shop" parent="." instance=ExtResource("11_nkisx")]
position = Vector2(569, 146)

[node name="SellZone" parent="." instance=ExtResource("16_ef3f0")]
position = Vector2(417, 82)

[node name="Monster" type="Node2D" parent="."]
y_sort_enabled = true

[node name="enemy" parent="Monster" instance=ExtResource("27_f8u45")]
position = Vector2(1136, 760)

[node name="HeightAdjusterComponent" parent="." node_paths=PackedStringArray("body", "tilemap") instance=ExtResource("28_dahbj")]
body = NodePath("../Player")
tilemap = NodePath("../TileMap")

[node name="HouseSceneTrigger" parent="." instance=ExtResource("30_n2tld")]
position = Vector2(664, 193)
connected_scene = "inside_house"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseSceneTrigger"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_306s6")
debug_color = Color(0.462745, 0.054902, 0.0705882, 0.419608)

[node name="EntranceMarkers" type="Node2D" parent="."]

[connection signal="planting" from="Player" to="." method="_on_player_planting"]
[connection signal="closed" from="GUI/InventoryGUI" to="." method="_on_inventory_gui_closed"]
[connection signal="opened" from="GUI/InventoryGUI" to="." method="_on_inventory_gui_opened"]
